k8s/overlays/minimal/mongo-resources-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  template:
    spec:
      containers:
        - name: mongo
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        resources:
          requests:
            storage: 5Gi
